# Grounded-SAM-2

./: .gitignore  CMakeLists.txt  README.md  grounded_sam2_local_demo.py  package.xml  setup.cfg  setup.py
grounding_dino/: setup.py
launch/: gsam2_server.launch.py
resources/: configs  gdino_checkpoints
resources/grounding_dino/groundingdino/: config
ros2_gsam2/: infer_core.py  infer_server.py
sam2/: build_sam.py
